--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="guardar">Guardar</string>
     <string name="equipo">Equipo</string>
     <string name="librosdb">librosDB</string>
-
+ <string name="legend_distancia">Distancia:</string>
+    <string name="legend_dificultad">Dificultad:</string>
 </resources>
